SWQA-2384 fix for results screen covering up help modal

--- a/platforms/html5/src/styles/main.scss
+++ b/platforms/html5/src/styles/main.scss
@@ -43,8 +43,8 @@
 // static
 
 body.swag-dialog-open {
-  pointer-events: none;
-  touch-action: none;
+  // pointer-events: none;
+  // touch-action: none;
   overflow: hidden;
 }
 
