--- a/platforms/html5/src/styles/summary.scss
+++ b/platforms/html5/src/styles/summary.scss
@@ -2,6 +2,7 @@ $swGold: #F90;
 $smallScreenHeight: 530px;
 
 .swag-summary {
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
